force-app/main/default/objects/Account/fields/Account_POC__c.field-meta.xml
<CustomField>
    <fullName>Account_POC__c</fullName>
    <label>Account POC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>