force-app/main/default/objects/Account/fields/Account_POC_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Account_POC_Firstname__c</fullName>
    <label>Account POC Firstname</label>
    <length>30</length>
    <type>Text</type>
</CustomField>