force-app/main/default/objects/Account/fields/Approval_comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_comments__c</fullName>
    <label>Approval comments</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>