force-app/main/default/objects/Account/fields/Approval_Rejected_Email_sent__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejected_Email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval/Rejected Email sent</label>
    <type>Checkbox</type>
</CustomField>