force-app/main/default/objects/Account/fields/Cloud_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Assignment__c</fullName>
    <label>Cloud Assignment</label>
    <type>Date</type>
</CustomField>