force-app/main/default/objects/Account/fields/Cloud_Customer__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloud Customer</label>
    <type>Checkbox</type>
</CustomField>