force-app/main/default/objects/Account/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>License number for the organization, provided by the uDC onboarding portal.</description>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>