force-app/main/default/objects/Account/fields/Rejection_comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_comments__c</fullName>
    <label>Rejection comments</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>