force-app/main/default/objects/Account/validationRules/Approval_Comments_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Comments_required</fullName>
    <active>true</active>
    <description>Comments required for Sending Approval</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&apos;Commercial&apos;,
ISPICKVAL(Onboarding_Status__c,&apos;Sending Approval&apos;),
OR(
    ISBLANK( Approval_comments__c ),
    LEN(Approval_comments__c)&lt;10
)
)</errorConditionFormula>
    <errorDisplayField>Approval_comments__c</errorDisplayField>
    <errorMessage>Comments required for Sending Approval</errorMessage>
</ValidationRule>