force-app/main/default/objects/Account/validationRules/Rejected_Comments_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Comments_required</fullName>
    <active>true</active>
    <description>Comments required for Sending Rejection</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&apos;Commercial&apos;,
ISPICKVAL(Onboarding_Status__c,&apos;Sending Rejection&apos;),
OR(
    ISBLANK(Rejection_comments__c),
    LEN(Rejection_comments__c)&lt;10
)
)</errorConditionFormula>
    <errorDisplayField>Rejection_comments__c</errorDisplayField>
    <errorMessage>Comments required for Sending Rejection</errorMessage>
</ValidationRule>